fix(TextField): remove Safari extra margin (#6924)

--- a/packages/wix-ui-tpa/src/components/TextField/TextField.st.css
+++ b/packages/wix-ui-tpa/src/components/TextField/TextField.st.css
@@ -169,6 +169,7 @@
     box-sizing: border-box;
     background-color: transparent;
     padding: 8px 12px;
+    margin: 0;
     min-width: 0;
 }
 
